@@ -1,5 +1,12 @@
 2007-05-22  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpcontrollers.c
+	* app/widgets/gimpdevices.c
+	* app/widgets/gimpdevicestatus.c
+	* app/widgets/gimpeditor.c: allocate structs using GSlice.
+
+2007-05-22  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpmenufactory.c
 	* app/widgets/gimpactionfactory.c: allocate structs using GSlice.
 
